[project]
name = "research-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-sdk>=0.1.74",
    "langsmith>=0.4.6",
    "pydantic>=2.11.7",
    "wikipedia>=1.4.0",
]
